src/test/deca/context/invalid/non-boolean-condition.des
Condition must be of type boolean